Add start on a section about logging
Reviewed-by: jwilhelm